--- a/src/app/Shared/components/header/header.component.html
+++ b/src/app/Shared/components/header/header.component.html
@@ -1,10 +1,12 @@
 <div class="header-container">
+  <span class="bars"></span>
   <div class="main-logo-wrp">
     <span class="mainLogo"></span>
     <p class="main__logo__txt">CruiseRentalHub</p>
   </div>
   <nav>
     <ul>
+      <span class="close__navbar"></span>
       <li routerLink="home" routerLinkActive="active__link">Home</li>
       <li routerLink="account" routerLinkActive="active__link">Account</li>
       <li routerLinkActive="active__link">Locations</li>
