--- a/src/app/Shared/components/header/header.component.scss
+++ b/src/app/Shared/components/header/header.component.scss
@@ -139,6 +139,7 @@
       width: 100%;
       height: 100%;
       z-index: 2;
+      display: none;
 
       ul {
         .close__navbar {
@@ -157,4 +158,8 @@
       width: 50%;
     }
   }
+}
+
+.navbar__open {
+  display: block !important;
 }
