responsive u main image panel

--- a/src/app/pages/home/components/main-image-panel/main-image-panel.component.html
+++ b/src/app/pages/home/components/main-image-panel/main-image-panel.component.html
@@ -13,8 +13,10 @@
       dolor fuga incidunt corporis iste perspiciatis? Iste commodi nam delectus
       earum sapiente, voluptatum est obcaecati nisi cumque facere ea vero?
     </p>
+
+    <button>View all cars</button>
   </div>
-  <div class="main-image-item">
+  <div class="main-image-item right-side-img-wrp">
     <div class="img-wrp">
       <img src="assets/images/home/lambo3.jpg" alt="lambo" />
     </div>
