dodate ikonice u how it works

--- a/src/app/Shared/components/booking-form/booking-form.component.scss
+++ b/src/app/Shared/components/booking-form/booking-form.component.scss
@@ -22,6 +22,7 @@
     padding: 1rem;
     border-radius: 5px;
     top: 10px;
+    border: 1px solid $primary-light-grey;
 
     .divider {
       position: relative;
