--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@ $primary-orange: #f39c12;
 $primary-black: #323232;
 $primary-light-grey: #c4c2c2;
 $primary-grey: #919090;
+$primary-blue: #34addd;
 
 //routerLinkActive
 .active__link {
