--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
 <app-main-image-panel></app-main-image-panel>
 <app-booking-form></app-booking-form>
 <app-how-it-works></app-how-it-works>
+<app-most-popular-cars></app-most-popular-cars>
