dodat angular rating

--- a/src/app/Shared/components/car-list-item/car-list-item.component.html
+++ b/src/app/Shared/components/car-list-item/car-list-item.component.html
@@ -6,7 +6,9 @@
   <!--model and rating-->
   <div class="model-and-rating-wrp">
     <p class="car__model">BMW Series 3</p>
-    <p>rating stars goes here</p>
+    <div class="rating-wrp">
+      <star-rating [starType]="'svg'" [rating]="2.63"></star-rating>
+    </div>
   </div>
   <!--end model and rating-->
   <!--car specifications-->
