--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/css-star-rating/scss/star-rating.scss";
 
 //colors
 $primary-orange: #f39c12;
