--- a/src/app/Shared/components/car-list-item/car-list-item.component.scss
+++ b/src/app/Shared/components/car-list-item/car-list-item.component.scss
@@ -27,6 +27,13 @@
       font-weight: bold;
       font-size: 1.2rem;
     }
+
+    .rating-wrp {
+      height: 30px;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+    }
   }
 
   .car-spec-wrp {
