--- a/src/app/Shared/components/car-list-item/car-list-item.component.scss
+++ b/src/app/Shared/components/car-list-item/car-list-item.component.scss
@@ -139,6 +139,11 @@
       align-items: center;
       justify-content: center;
 
+      &:hover {
+        background-color: $primary-blue;
+        border-color: $primary-blue;
+      }
+
       .date__icon {
         display: block;
         background: url("/assets/icons/carListItem/date.svg");
