fakeBackend za bmw

--- a/src/app/Shared/components/car-list-item/car-list-item.component.html
+++ b/src/app/Shared/components/car-list-item/car-list-item.component.html
@@ -1,36 +1,51 @@
 <!--CAR ITEM-->
+@if(car){
 <div class="car-item-container">
   <div class="img-wrp">
-    <img src="assets/images/home/bmw.png" alt="bmw.png" />
+    <img src="{{ car.mainImage }}" alt="{{ car.mainImage }}" />
   </div>
   <!--model and rating-->
   <div class="model-and-rating-wrp">
-    <p class="car__model">BMW Series 3</p>
+    <p class="car__model">{{ car.model }}</p>
+    <p class="car__make">{{ car.make }}</p>
     <div class="rating-wrp">
-      <star-rating [starType]="'svg'" [rating]="2.63"></star-rating>
+      <star-rating [starType]="'svg'" [rating]="car.rating"></star-rating>
     </div>
   </div>
   <!--end model and rating-->
   <!--car specifications-->
   <div class="car-spec-wrp">
     <div class="icons-column">
-      <div class="icon-wrp"><span class="steer__icon"></span>Manual</div>
-      <div class="icon-wrp"><span class="speed__icon"></span>Speed</div>
-      <div class="icon-wrp"><span class="gas__icon"></span>Gas</div>
+      <div class="icon-wrp">
+        <span class="steer__icon"></span>{{ car.shiftType }}
+      </div>
+      <div class="icon-wrp">
+        <span class="speed__icon"></span>{{ car.maxSpeed }}
+      </div>
+      <div class="icon-wrp">
+        <span class="gas__icon"></span>{{ car.gasType }}
+      </div>
     </div>
     <div class="icons-column">
-      <div class="icon-wrp"><span class="engine__icon"></span>Turbo</div>
-      <div class="icon-wrp"><span class="age__icon"></span>2021</div>
-      <div class="icon-wrp"><span class="capacity__icon"></span>5</div>
+      <div class="icon-wrp">
+        <span class="engine__icon"></span>{{ car.engine }}
+      </div>
+      <div class="icon-wrp"><span class="age__icon"></span>{{ car.year }}</div>
+      <div class="icon-wrp">
+        <span class="capacity__icon"></span>{{ car.capacity }}
+      </div>
     </div>
   </div>
   <!--end car specification-->
   <!--location and price wrp-->
   <div class="location-price-wrp">
     <div class="location-wrp">
-      <span class="location__icon"></span> New York
+      <span class="location__icon"></span> {{ car.location }}
     </div>
-    <div class="price-wrp"><span class="price">180$</span>/hour</div>
+    <div class="price-wrp">
+      <span class="price">{{ car.hourPrice }}</span
+      >/hour
+    </div>
   </div>
   <!--end location price wrp-->
   <!--rent button-->
@@ -39,4 +54,7 @@
   </div>
   <!--end rent btn-->
 </div>
+
+}
+
 <!-- END CAR ITEM-->
