--- a/src/app/pages/home/components/popular-cars-list/popular-cars-list.component.html
+++ b/src/app/pages/home/components/popular-cars-list/popular-cars-list.component.html
@@ -1,6 +1,5 @@
 <div class="popular-car-list-container">
-  <app-car-list-item></app-car-list-item>
-  <app-car-list-item></app-car-list-item>
-  <app-car-list-item></app-car-list-item>
-  <app-car-list-item></app-car-list-item>
+  @for(car of cars | async;track car.id){
+  <app-car-list-item [car]="car"></app-car-list-item>
+  }
 </div>
