--- a/src/app/Shared/components/car-list-item/car-list-item.component.scss
+++ b/src/app/Shared/components/car-list-item/car-list-item.component.scss
@@ -28,6 +28,10 @@
       font-size: 1.2rem;
     }
 
+    .car__make {
+      font-size: 1rem;
+    }
+
     .rating-wrp {
       height: 30px;
       display: flex;
