dodat slider za carTypes

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,3 +2,4 @@
 <app-booking-form></app-booking-form>
 <app-how-it-works></app-how-it-works>
 <app-most-popular-cars></app-most-popular-cars>
+<app-popular-car-types></app-popular-car-types>
