--- a/src/app/pages/home/components/popular-cars-list/popular-cars-list.component.scss
+++ b/src/app/pages/home/components/popular-cars-list/popular-cars-list.component.scss
@@ -1,6 +1,6 @@
 .popular-car-list-container {
   width: 100%;
-  height: 400px;
+  height: auto;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
