--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,3 +3,4 @@
 <app-how-it-works></app-how-it-works>
 <app-most-popular-cars></app-most-popular-cars>
 <app-popular-car-types></app-popular-car-types>
+<app-facts-by-numbers></app-facts-by-numbers>
