car rental deals scroll dodat

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,3 +4,4 @@
 <app-most-popular-cars></app-most-popular-cars>
 <app-popular-car-types></app-popular-car-types>
 <app-facts-by-numbers></app-facts-by-numbers>
+<app-recommended-car-rentals></app-recommended-car-rentals>
