all cars btn dodat

--- a/src/app/pages/home/components/recommended-car-rentals/recommended-car-rentals.component.scss
+++ b/src/app/pages/home/components/recommended-car-rentals/recommended-car-rentals.component.scss
@@ -1,6 +1,7 @@
 @import "../../../../../styles.scss";
 .recommended-car-deals-container {
   height: auto;
+
   .heading-wrp {
     height: 200px;
     display: flex;
@@ -44,6 +45,30 @@
           margin: 1rem;
         }
       }
+    }
+  }
+}
+
+.all-cars-btn-wrp {
+  position: relative;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  button {
+    height: 30px;
+    width: 150px;
+    background-color: transparent;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 1rem;
+    font-weight: bold;
+
+    &:hover {
+      background-color: $primary-orange;
+      color: white;
+      border-color: $primary-orange;
     }
   }
 }
