why chose us komponenta dodata

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,3 +5,4 @@
 <app-popular-car-types></app-popular-car-types>
 <app-facts-by-numbers></app-facts-by-numbers>
 <app-recommended-car-rentals></app-recommended-car-rentals>
+<app-why-chose-us></app-why-chose-us>
