--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@ $primary-black: #323232;
 $primary-light-grey: #c4c2c2;
 $primary-grey: #919090;
 $primary-blue: #34addd;
+$primary-blue-green: #088f8f;
 
 //routerLinkActive
 .active__link {
