--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,3 +6,4 @@
 <app-facts-by-numbers></app-facts-by-numbers>
 <app-recommended-car-rentals></app-recommended-car-rentals>
 <app-why-chose-us></app-why-chose-us>
+<app-reviews-slider></app-reviews-slider>
