--- a/src/app/Shared/components/car-list-item/car-list-item.component.scss
+++ b/src/app/Shared/components/car-list-item/car-list-item.component.scss
@@ -7,17 +7,27 @@
   padding: 5px;
   border-radius: 5px;
   background-color: #f3f0f0;
+  cursor: pointer;
 
   .img-wrp {
     position: relative;
     height: 150px;
     width: 100%;
+    overflow: hidden;
+
+    &:hover {
+      img {
+        transform: scale(1.1);
+        transition-duration: 700ms;
+        transition-property: "scale";
+      }
+    }
 
     img {
       position: absolute;
       width: 100%;
       height: 100%;
-      object-fit: contain;
+      object-fit: cover;
       border-radius: 5px;
     }
   }
