tranzicije na rent now btn

--- a/src/app/Shared/components/car-list-item/car-list-item.component.scss
+++ b/src/app/Shared/components/car-list-item/car-list-item.component.scss
@@ -156,6 +156,8 @@
       &:hover {
         background-color: $primary-blue;
         border-color: $primary-blue;
+        transition-property: "background-color";
+        transition-duration: 500ms;
       }
 
       .date__icon {
