--- a/src/app/Shared/components/review-item/review-item.component.scss
+++ b/src/app/Shared/components/review-item/review-item.component.scss
@@ -12,6 +12,8 @@
   &:hover {
     background-color: $primary-blue-green;
     color: white;
+    transition-property: "background-color";
+    transition-duration: 500ms;
   }
 
   .img-and-rating-wrp {
