--- a/src/app/pages/home/components/facts-by-numbers/facts-by-numbers.component.scss
+++ b/src/app/pages/home/components/facts-by-numbers/facts-by-numbers.component.scss
@@ -60,6 +60,19 @@
       padding-left: 10px;
       padding-right: 10px;
       margin: 1rem;
+      cursor: pointer;
+
+      &:hover {
+        transform: translateY(-10px);
+        transition-duration: 500ms;
+        transition-property: "translateY";
+
+        .stat-item-icon-wrp {
+          background-color: $primary-blue-green;
+          transition-property: "background-color";
+          transition-duration: 500ms;
+        }
+      }
 
       .stat-item-icon-wrp {
         width: 70px;
