arrow up question accordion

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,3 +7,4 @@
 <app-recommended-car-rentals></app-recommended-car-rentals>
 <app-why-chose-us></app-why-chose-us>
 <app-reviews-slider></app-reviews-slider>
+<app-frequently-ask-questions></app-frequently-ask-questions>
