--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,3 +8,4 @@
 <app-why-chose-us></app-why-chose-us>
 <app-reviews-slider></app-reviews-slider>
 <app-frequently-ask-questions></app-frequently-ask-questions>
+<app-pricing-package></app-pricing-package>
