--- a/src/app/pages/home/components/pricing-package/pricing-package.component.scss
+++ b/src/app/pages/home/components/pricing-package/pricing-package.component.scss
@@ -17,6 +17,13 @@
     }
   }
 
+  .switch-wrp {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+  }
+
   .pricing-list-wrp {
     display: flex;
     justify-content: center;
