romena texta za pricing plan dodata

--- a/src/app/pages/home/components/pricing-package/pricing-package.component.html
+++ b/src/app/pages/home/components/pricing-package/pricing-package.component.html
@@ -23,8 +23,8 @@
     <div class="pricing-item">
       <div class="item-heading-wrp">Essential</div>
       <div class="price-wrp">
-        <p>125$</p>
-        <span>per month</span>
+        <p>{{ pricingPlan.essential }}</p>
+        <span #planType>per month</span>
       </div>
       <ul>
         <li><span class="checkMark__icon"></span>Get starting message</li>
@@ -42,8 +42,8 @@
     <div class="pricing-item">
       <div class="item-heading-wrp orange--bg">Recommended</div>
       <div class="price-wrp">
-        <p>125$</p>
-        <span>per month</span>
+        <p>{{ pricingPlan.recommended }}</p>
+        <span #planType>per month</span>
       </div>
       <ul>
         <li><span class="checkMark__icon"></span>Get starting message</li>
@@ -61,8 +61,8 @@
     <div class="pricing-item">
       <div class="item-heading-wrp">Pro</div>
       <div class="price-wrp">
-        <p>125$</p>
-        <span>per month</span>
+        <p>{{ pricingPlan.pro }}</p>
+        <span #planType>per month</span>
       </div>
       <ul>
         <li><span class="checkMark__icon"></span>Get starting message</li>
