--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,3 +9,4 @@
 <app-reviews-slider></app-reviews-slider>
 <app-frequently-ask-questions></app-frequently-ask-questions>
 <app-pricing-package></app-pricing-package>
+<app-bottom-banner></app-bottom-banner>
