--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,3 +10,4 @@
 <app-frequently-ask-questions></app-frequently-ask-questions>
 <app-pricing-package></app-pricing-package>
 <app-bottom-banner></app-bottom-banner>
+<app-footer></app-footer>
