--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,9 @@ $primary-light-grey: #c4c2c2;
 $primary-grey: #919090;
 $primary-blue: #34addd;
 $primary-blue-green: #088f8f;
+$facebook: #1877f2;
+$instagram-purple-red: #e1306c;
+$linkedin: #0077b5;
 
 //routerLinkActive
 .active__link {
