signIn forma dodata

--- a/src/app/Shared/components/header/header.component.html
+++ b/src/app/Shared/components/header/header.component.html
@@ -16,7 +16,11 @@
     </ul>
   </nav>
   <div class="auth-btn-wrp">
-    <button class="sign__in"><span class="user__icon"></span>Sign In</button>
-    <button class="sign__up"><span class="lock__icon"></span>Sign up</button>
+    <button routerLink="/account/signIn" class="sign__in">
+      <span class="user__icon"></span>Sign In
+    </button>
+    <button routerLink="/account/signUp" class="sign__up">
+      <span class="lock__icon"></span>Sign up
+    </button>
   </div>
 </div>
