sign up forma dodata

--- a/src/app/pages/account/components/sign-up/sign-up.component.html
+++ b/src/app/pages/account/components/sign-up/sign-up.component.html
@@ -1,1 +1,22 @@
-<p>sign-up works!</p>
+<div class="signUp-container">
+  <form>
+    <div class="input-wrp">
+      <label for="name">Name <span>*</span></label>
+      <input type="text" name="name" />
+    </div>
+    <div class="input-wrp">
+      <label for="surname">Surname <span>*</span></label>
+      <input type="text" name="surname" />
+    </div>
+    <div class="input-wrp">
+      <label for="email">Email <span>*</span></label>
+      <input type="email" name="email" />
+    </div>
+    <div class="input-wrp">
+      <label for="password">Password <span>*</span></label>
+      <input type="password" name="password" />
+    </div>
+
+    <button>Sign Up</button>
+  </form>
+</div>
