location details dodata

--- a/src/app/Shared/components/header/header.component.html
+++ b/src/app/Shared/components/header/header.component.html
@@ -9,7 +9,7 @@
       <span class="close__navbar" (click)="closeNavbar()"></span>
       <li routerLink="home" routerLinkActive="active__link">Home</li>
       <li routerLink="account" routerLinkActive="active__link">Account</li>
-      <li routerLinkActive="active__link">Locations</li>
+      <li routerLink="locations" routerLinkActive="active__link">Locations</li>
       <li routerLinkActive="active__link">Our deals</li>
       <li routerLinkActive="active__link">Vehicles</li>
       <li routerLinkActive="active__link">Services</li>
