--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@ $primary-blue-green: #088f8f;
 $facebook: #1877f2;
 $instagram-purple-red: #e1306c;
 $linkedin: #0077b5;
+$saphire-blue: #0f52ba;
 
 //routerLinkActive
 .active__link {
