--- a/src/app/Shared/components/footer/footer.component.scss
+++ b/src/app/Shared/components/footer/footer.component.scss
@@ -30,7 +30,7 @@
 
   .footer-links-wrp {
     width: 200px;
-    height: 300px;
+    height: 400px;
 
     h6 {
       color: white;
@@ -128,7 +128,6 @@
     .social-links-wrp {
       display: flex;
       align-items: center;
-      height: auto;
       justify-content: space-around;
 
       .social-icon-wrp {
@@ -179,6 +178,7 @@
   border-top: 1px solid $primary-light-grey;
   padding-top: 10px;
   padding-bottom: 10px;
+  align-items: center;
 
   p {
     color: white;
