destination details komponenta dodata

--- a/src/app/Shared/components/header/header.component.html
+++ b/src/app/Shared/components/header/header.component.html
@@ -11,7 +11,7 @@
       <li routerLink="account" routerLinkActive="active__link">Account</li>
       <li routerLink="locations" routerLinkActive="active__link">Locations</li>
       <li routerLinkActive="active__link">Our deals</li>
-      <li routerLinkActive="active__link">Vehicles</li>
+      <li routerLink="vehicles" routerLinkActive="active__link">Vehicles</li>
       <li routerLinkActive="active__link">Services</li>
     </ul>
   </nav>
