--- a/src/app/pages/locations/components/location-index/location-index.component.html
+++ b/src/app/pages/locations/components/location-index/location-index.component.html
@@ -10,4 +10,21 @@
     }
   </ul>
   <pagination-controls (pageChange)="p = $event"></pagination-controls>
+  <div class="text-wrp">
+    <hr />
+    <h6>CruiseRentalHub Worlwide</h6>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit mollitia
+      molestias, odit delectus explicabo, porro debitis, ex nostrum ducimus enim
+      non odio? Eveniet, id numquam voluptatum hic magni, in quod ad doloremque
+      laboriosam, nostrum saepe sit et ipsam consequuntur inventore provident
+      neque molestias eligendi commodi blanditiis pariatur harum libero!
+      Perspiciatis et perferendis dicta ipsum tempore maiores, a eos
+      consequuntur, mollitia, vel dolorum iste excepturi beatae iure distinctio
+      fugit. Aperiam molestiae, earum quo dignissimos, modi odio aliquam
+      obcaecati inventore sint a nostrum hic quia sit temporibus fugit
+      reiciendis totam facere aut? Commodi cumque veritatis repellendus
+      deleniti, quisquam quibusdam ex non voluptatum.
+    </p>
+  </div>
 </div>
