--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <app-main-image-panel></app-main-image-panel>
-<app-booking-form></app-booking-form>
+<app-search-form></app-search-form>
 <app-how-it-works></app-how-it-works>
 <app-most-popular-cars></app-most-popular-cars>
 <app-popular-car-types></app-popular-car-types>
