--- a/src/app/pages/locations/components/search-locations/search-locations.component.scss
+++ b/src/app/pages/locations/components/search-locations/search-locations.component.scss
@@ -38,6 +38,7 @@
           border-bottom: 1px solid $primary-light-grey;
           width: 80%;
           padding: 1rem;
+          cursor: pointer;
         }
       }
     }
