--- a/src/app/pages/locations/components/destination-details/destination-details.component.scss
+++ b/src/app/pages/locations/components/destination-details/destination-details.component.scss
@@ -8,7 +8,7 @@
     justify-content: center;
     margin: 1rem;
     width: 100%;
-    height: 450px;
+    height: auto;
     border: 1px solid $primary-light-grey;
     border-radius: 5px;
     .details-wrp {
