location car list item dodat

--- a/src/app/pages/locations/components/location-car-list/location-car-list.component.html
+++ b/src/app/pages/locations/components/location-car-list/location-car-list.component.html
@@ -3,4 +3,12 @@
   <hr />
 
   <!--HERE ADD CAR LIST ITEMS-->
+  <div class="inner-wrp">
+    @for(car of carsByDest;track car.id){
+    <div class="car-item-wrp">
+      <app-car-list-item [car]="car"></app-car-list-item>
+    </div>
+
+    }
+  </div>
 </div>
